# extreme-weather-stockout-alert

./: .env  .pre-commit-config.yaml  README.md  apply_schema_and_copy_csv.sh  docker-compose.yml  pyproject.toml
imports/: sales_2024.csv  stores.csv
scr/db/: schema.sql
scripts/seed/: generate_demo_data.py
src/db/: schema.sql
